# TasksC-

./: .gitignore  .gitignore.txt  README.md
CS_courseCpp/: task1_4.cpp  task1_6.cpp  task3_4.cpp
CS_course_cpp/: task2_2.cpp
CScpp/: CMakeLists.txt  main.cpp  task1_2_10.cpp  task1_2_4.cpp  task1_4.cpp  task1_6.cpp  task2_1.cpp  task2_3.cpp  task2_3.cpp.autosave  task3_2.cpp  task3_3.cpp  task3_4.cpp  task3_5.cpp  task4_1.cpp  task4_3.cpp  task5_3.cpp
DynamicString/: README.md  main.cpp
EDC_ApplicationQT/: CMakeLists.txt  main.cpp
EDC_ApplicationQT/Core/: filemodelmanager.cpp  filemodelmanager.h
EDC_ApplicationQT/Keys/: Key_23.10.2024_20.26.10.txt
EDC_ApplicationQT/UI/: edcwatcher.cpp  edcwatcher.h
EDC_Application_QT/: README.md
FindPathTask/: CMakeLists.txt  main.cpp
FindPathTask/Core/: cell_controller.h  field_controller.cpp  field_controller.h  pathfinder.cpp  pathfinder.h
FindPathTask/FindPathTask/UI/: left_side.cpp  main_window.cpp  right_side.cpp  right_side.h
FindPathTask/FindPathTask/UI/blocks/: field_wrapper.cpp  size_setting.cpp
FindPathTask/UI/: left_side.cpp  left_side.h  main_window.cpp  main_window.h  right_side.cpp  right_side.h
FindPathTask/UI/blocks/: field.cpp  field.h  field_wrapper.cpp  field_wrapper.h  size_setting.cpp  size_setting.h
FindPathTask/UI/blocks/field/: cell.h  field_view.cpp  field_view.h
MediaPlayer/: CMakeLists.txt  main.cpp
MediaPlayer/Core/: mediaplayer.cpp  mediaplayer.h  playlistmanager.cpp  playlistmanager.h  playlistmodel.cpp  playlistmodel.h
MediaPlayer/UI/: Main.qml
MediaPlayer/UI/Blocks/: Bottom.qml  ParametersView.qml  UpperLeft.qml  UpperRight.qml
MediaPlayer/UI/Components/: ButtonRound.qml  ButtonStandart.qml  ProgressBar.qml
StringSorter/: CMakeLists.txt  sorter.cpp  sortertests.cpp  sortertests.h
String_sorter/: README.md  sortertests.cpp
build-CScpp-Desktop_Qt_6_6_3_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  CScpp  build.ninja  cmake_install.cmake
build-CScpp-Desktop_Qt_6_6_3_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-cae1e3cb0ec1d032a37d.json  cmakeFiles-v1-80ea6659344e22ada24b.json  codemodel-v2-ea89fa58fff377aef579.json  directory-.-Debug-40a19930ef40bfcd7016.json  index-2024-05-20T09-23-27-0173.json  target-CScpp-Debug-546835d1e614a9b10f0b.json
build-CScpp-Desktop_Qt_6_6_3_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-b81064bd62c0a8260217.json  index-2024-05-20T09-22-26-0243.json  target-CScpp-Debug-53502007d9d2dc793d94.json
build-CScpp-Desktop_Qt_6_6_3_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-CScpp-Desktop_Qt_6_6_3_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: alloca.h.B3C3404035C15EA6.idx  cstddef.A22CA8BCD4F87AA4.idx  locale.h.5F1EA2E91D0CD92F.idx  main.cpp.408C474FBFB7C9A5.idx  sched.h.5B833830F429325A.idx  stdarg.h.71994602C3F806C6.idx  stdio.h.39AA179546A5CA11.idx  stdlib.h.9500795D2AE691D2.idx  task1_2_10.cpp.CFE09B06630DE1C4.idx  task1_2_4.cpp.1682E7BDC7E2049C.idx  task1_4.cpp.B8748EA0743A3E15.idx  task1_5.cpp.42E53D11466FD317.idx  task1_6.cpp.9B3AA3F3CB27F0FC.idx  task2_1.cpp.12431AE4A8E57A2B.idx  time.h.406C037FEAE97D8D.idx  types.h.253C91793AF0A32F.idx  wchar.h.A65FEA87E595D0B5.idx
sorter_test_task/: main.cpp  sorter.h  sortertests.h
